# Labs

./: README.md  resume_ru_ml.tex
Java/: settings.gradle
Java/Lab1/: build.gradle
Java/Lab2/: build.gradle
Java/Lab3/: build.gradle
Java/Lab4/: build.gradle
c# microservice/lab-1/: lab-1.csproj
c# microservice/lab-2/: Program.cs  lab-2.csproj
c# microservice/lab-3/: docker-compose.yaml
c# microservice/lab-4/: docker-compose.yaml
c# oop labs/: Itmo.ObjectOrientedProgramming.sln
c++ labs/labwork1-Komperlan/: main.cpp
c++ labs/labwork10-Komperlan/: CMakeLists.txt
c++ labs/labwork3-Komperlan/: README.md
c++ labs/labwork5-Komperlan/: README.md
c++ labs/labwork6-Komperlan/: CMakeLists.txt  README.md
c++ labs/labwork6-Komperlan/tests/: CMakeLists.txt
c++ labs/labwork7-Komperlan/: CMakeLists.txt  README.md
c++ labs/labwork7-Komperlan/lib/: CMakeLists.txt  parse.cpp  parse.h  pictures.cpp  pictures.h  read_config.cpp  read_config.h
c++ labs/labwork8-Komperlan/: CMakeLists.txt
c++ labs/labwork9-Komperlan/: CMakeLists.txt
c++ labs/livecoding-Komperlan/: main.cpp  task_1.h  task_2.h
labwork1-Komperlan/: README.md
labwork2-Komperlan/: README.md
labwork2-Komperlan/lib/: number.cpp
labwork2-Komperlan/tests/: CMakeLists.txt
labwork3-Komperlan/: CMakeLists.txt
labwork3-Komperlan/src/: bmp.h  main.h  qeueue.h
labwork4-Komperlan/: README.md
labwork5-Komperlan/: CMakeLists.txt
labwork5-Komperlan/lib/: Array17_3D.cpp  Array17_3D.h  CMakeLists.txt
labwork6-Komperlan/lib/: ArgParser.h  CMakeLists.txt  Files.h  Information_about_files.cpp
labwork6-Komperlan/tests/: Archivator_tests.cpp
labwork8-Komperlan/: README.md
labwork8-Komperlan/src/: main.cpp
labwork8-Komperlan/tests/: CMakeLists.txt  tests.cpp
labwork9-Komperlan/src/: CMakeLists.txt  main.cpp
labwork9-Komperlan/tests/: test.cpp
ml/1-parser-Komperlan-main/: README.md  cars_data_example.csv  config.py  main.py
ml/2-supervised-Komperlan-main/: README.md  lab2.ipynb
(+412 files in other folders)
